[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/game-master.gd" type="Script" id=1]
[ext_resource path="res://scenes/bonus-text/bonus-text.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/game.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/time-trial/time-trial.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/game-kalei.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/pause-interface/pause-interface.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/post-effect/post-effect.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/count-down/count-down.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/game-intro.tscn" type="PackedScene" id=10]

[node name="GameMaster" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
BonusText = ExtResource( 2 )
CountDown = ExtResource( 8 )

[node name="Games" type="Node2D" parent="."]

[node name="GameSolo" parent="Games" instance=ExtResource( 3 )]
visible = false

[node name="GameKalei" parent="Games" groups=[
"game",
] instance=ExtResource( 5 )]
visible = false

[node name="Intro" type="Node2D" parent="."]

[node name="GameIntro" parent="Intro" instance=ExtResource( 10 )]

[node name="TimeTrial" parent="." instance=ExtResource( 4 )]
pause_mode = 1

[node name="PostEffect" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.317512, -1.33698 )
z_index = 1

[node name="Positions" type="Node" parent="."]

[node name="ComboPosition" type="Node2D" parent="Positions"]
position = Vector2( 360, 426 )

[node name="LevelPosition" type="Node2D" parent="Positions"]
position = Vector2( 360, 856 )

[node name="CenterPosition" type="Position2D" parent="Positions"]
position = Vector2( 360, 680 )

[node name="ComboTimerUI" type="Timer" parent="."]
wait_time = 0.1

[node name="ChangeState" type="Timer" parent="."]

[node name="Pause" parent="." instance=ExtResource( 6 )]
anchor_left = 1.0
margin_left = 712.0
margin_top = 8.0
margin_right = 712.0
margin_bottom = 8.0

[connection signal="no_combo_time_left" from="Games/GameSolo" to="." method="_on_Game_no_combo_time_left"]
[connection signal="score" from="Games/GameSolo" to="." method="score"]
[connection signal="wrong" from="Games/GameSolo" to="." method="wrong"]
[connection signal="no_combo_time_left" from="Games/GameKalei" to="." method="_on_Game_no_combo_time_left"]
[connection signal="score" from="Games/GameKalei" to="." method="score"]
[connection signal="wrong" from="Games/GameKalei" to="." method="wrong"]
[connection signal="score" from="Intro/GameIntro" to="." method="_on_GameIntro_score"]
[connection signal="lost" from="TimeTrial" to="." method="_on_TimeTrial_lost"]
[connection signal="timeout" from="ComboTimerUI" to="." method="_on_ComboTimerUI_timeout"]
[connection signal="timeout" from="ChangeState" to="." method="_on_ChangeState_timeout"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
